--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeeldiTechTest">
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
+            android:name=".presentation.main.MainActivity"            android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.BeeldiTechTest">
             <intent-filter>
